--- a/Week-2/rotationAnimation/rotation.html
+++ b/Week-2/rotationAnimation/rotation.html
@@ -1,15 +1,11 @@
+<!DOCTYPE html>
 <html>
-<style>
-
-</style>
 <title> Rotation Animation </title>
 <head>
       <link rel="stylesheet" type="text/css" href="csscode.css">
 </head>
 <body>
-
   <header>
-
       <p>The colored squares open up when the div main is hovered. To open up each square should rotate 90 degrees by its outer most corner </P>
   </header>
   <div id = "prim">
